Revise README.md for clarity and detail
Enhanced the README.md to provide detailed explanations of the DeepScan engine's features, system prerequisites, installation guide, and usage instructions.